Api for user-details.
